<resources>
    <string name="app_name">BlueCar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_app_exit">어플 종료</string>
    <string name="content_app_exit">어플을 종료하시겠습니까?</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="tv_head">Bluetooth Car Control</string>
    <string name="tv_velocity">0</string>
    <string name="tv_bluetoothState">블루투스 연결 상태</string>
    <string name="bt_connect">장치 연결</string>
    <string name="bt_stop">■</string>
    <string name="bt_forward">▲</string>
    <string name="bt_backward">▼</string>
    <string name="bt_left">◀</string>
    <string name="bt_right">▶</string>
    <string name="bt_break">브레이크</string>
    <string name="bt_accel">액셀레이터</string>


    <string name="title_bluetooth_available">블루투스 사용가능 장비</string>
    <string name="title_bluetooth_unavailable">블루투스 사용불가 장비</string>
    <string name="content_bluetooth_unavailable">블루투스 사용불가 장비입니다. 앱을 종료합니다</string>

    <string name="bluetooth_on">블루투스 켜짐</string>
    <string name="bluetooth_off">블루투스 안켜짐</string>

    <string name="bluetooth_connect">장치 연결됨</string>

    <string name="scanning">장치 스캔중...</string>
    <string name="select_device">연결할 장치 선택</string>
    <string name="none_paired">페어링된 장치가 없습니다.</string>
    <string name="none_found">장치를 찾을 수 없습니다.</string>
    <string name="title_paired_devices">페어링되었던 장치</string>
    <string name="title_other_devices">기타 연결가능 장치</string>
    <string name="bt_scan">장치 스캔</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>


</resources>